--- a/css/main.css
+++ b/css/main.css
@@ -187,8 +187,12 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
+@media only screen and (min-width: 560px) {
   /* Style adjustments for viewports that meet the condition */
+}
+
+@media only screen and (min-width: 768px) {
+
 }
 
 @media print,
@@ -262,4 +266,3 @@ textarea {
     page-break-after: avoid;
   }
 }
-
