--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body{
   outline: none !important;
 }
 /*-------------Banner section------------*/
-@keyframes slideimg {
+/* @keyframes slideimg {
   from {
     transform: translateY(0px);
   }
@@ -43,7 +43,7 @@ body{
   to {
     transform: translateY(0px);
   }
-}
+} */
 
 #banner{
   background-image: linear-gradient(to bottom, #00204A, #005792);
@@ -66,7 +66,7 @@ body{
 .img-fluid{
   width: 450px;
   height: 350px;
-  animation: 3s linear 1s infinite alternate running slideimg;
+  /* animation: 3s linear 1s infinite alternate running slideimg; */
 }
 .bottom-img{
   width: 100%;
@@ -74,7 +74,7 @@ body{
 }
 
 /*-------------Services section------------*/
-@keyframes slide {
+/* @keyframes slide {
   from {
     transform: translateX(0px);
   }
@@ -84,7 +84,7 @@ body{
   to {
     transform: translateX(0px);
   }
-}
+} */
 #services{
   padding: 50px 0;
 }
@@ -92,9 +92,9 @@ body{
   width: 180px;
   margin-top: 40px;
 }
-.service-img:hover{
+/* .service-img:hover{
   animation: 3s linear 1s 5 alternate running slide;
-}
+} */
 .services {
   padding: 20px;
 }
